--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egy szuper oldal</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
+
 <body>
     <ul>
         <li>
@@ -21,29 +24,35 @@
             <a href="/about.html">About</a>
         </li>
     </ul>
-   <h1>Fantastic Burger</h1>
-   <ul>
-       <li>Meat Lover</li>
+    <h1>Fantastic Burger</h1>
+    <ul>
+        <li>Meat Lover</li>
         <ul>
             <li>Beef</li>
             <li>Pork</li>
             <li>Turkey</li>
         </ul>
-       <li>Vegetarian</li>
-       <li>Piedone</li>
-   </ul> 
-   <h2>Toppings</h2>
-   <ol>
-       <li>Choose</li>
-       <li>Select Toppings</li>
-       <li>Give your address</li>
-       <li>Pay</li>
-       <li>Enjoy!</li>
-   </ol>
-   <a target="blank" href="https://www.tasteofhome.com/recipes/barbecued-burgers/">Barbecued Burgers</a>
-   <a href="pages/orders.html">Orders</a>
-   <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img width="300" src="https://m.blog.hu/mr/mrfoster/image/50529468_l.jpg" alt="Hamburger"></a>
+        <li>Vegetarian</li>
+        <li>Piedone</li>
+    </ul>
+    <h2>Toppings</h2>
+    <ol>
+        <li>Choose</li>
+        <li>Select Toppings</li>
+        <li>Give your address</li>
+        <li>Pay</li>
+        <li>Enjoy!</li>
+    </ol>
+    <a target="blank" href="https://www.tasteofhome.com/recipes/barbecued-burgers/">Barbecued Burgers</a>
+    <a href="pages/orders.html">Orders</a>
+    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img width="300"
+            src="https://m.blog.hu/mr/mrfoster/image/50529468_l.jpg" alt="Hamburger"></a>
 
-   
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
 </body>
+
 </html>
