--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         <li>Pay</li>
         <li>Enjoy!</li>
     </ol>
-    <a target="blank" href="https://www.tasteofhome.com/recipes/barbecued-burgers/">Barbecued Burgers</a>
-    <a href="pages/orders.html">Orders</a>
-    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img width="300"
+    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img
+            src="https://m.blog.hu/mr/mrfoster/image/50529468_l.jpg" alt="Hamburger"></a> <a
+        href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img
+            src="https://m.blog.hu/mr/mrfoster/image/50529468_l.jpg" alt="Hamburger"></a>
+    <a href="https://www.tasteofhome.com/recipes/barbecued-burgers/"><img
             src="https://m.blog.hu/mr/mrfoster/image/50529468_l.jpg" alt="Hamburger"></a>
     <p class="content">
         <span class="bold"> Jon Doe.</span> Programmer at Google.
